--- a/index.html
+++ b/index.html
@@ -52,15 +52,27 @@
                 <h3>Bienvenido a Mental Tech! </h3>
                 <p>En Mental Tech te ayudamos a desarrollar tus habilidades intelectuales superiores.</p>
                 <div class="row">
-                    <div class="large-4 columns">
-                        <p><a href="#">Numerando</a><br/>Concentracion.</p><img src="./img/thumbnail.png"></img>
+                    <div class="large-4 columns" style="margin: 5px 0px 5px 0px;">
+                        <p><a href="#">Numerando</a><br/>Concentracion.</p>
+                        <div class="nice round progress large-11">
+							<span class="meter" style="width: 79%"><font style="padding-left:25px;">79%</font></span>
+						</div>
+                        <img src="./img/thumbnail.png"></img>
                     </div>
-                    <div class="large-4 columns">
-                        <p><a href="#">Atrapalo</a><br/>Agilidad.</p><img src="./img/thumbnail.png"></img>
+                    <div class="large-4 columns" style="margin: 5px 0px 5px 0px;">
+                        <p><a href="#">Atrapalo</a><br/>Agilidad.</p>
+                        <div class="nice round progress large-11">
+							<span class="meter" style="width: 27%"><font style="padding-left:25px;">27%</font></span>
+						</div>
+                        <img src="./img/thumbnail.png"></img>
                     </div>
-                    <div class="large-4 columns">
-                        <p><a href="#">Corre</a><br/>Velocidad.</p><img src="./img/thumbnail.png"></img>
-                    </div>       
+                    <div class="large-4 columns" style="margin: 5px 0px 5px 0px;">
+                        <p><a href="#">Corre</a><br/>Velocidad.</p>
+                        <div class="nice round progress success large-11">
+							<span class="meter" style="width: 100%"><font style="padding-left:25px;">100%</font></span>
+						</div>
+                        <img src="./img/thumbnail.png"></img>
+                    </div>
                 </div>
             </div>
         </div>
